# git-lsvtree

./: .gitignore  README.md  __init__.py  __main__.py  pyproject.toml
app/: __init__.py  graph_loader.py  main_window.py
core/: __init__.py  branch_rebuilder.py  collapse_model.py  diff_service.py  git_repo.py  graph_model.py  history_loader.py  key_selector.py  project_tree.py
doc/: code-review-remark-20260621.md  design.md  edge-overlay-alignment-plan-20260621_204556.md  edge-overlay-refresh-cache-plan-20260621_205316.md  edge-routing-refinement-plan-20260621_193716.md  project-navigator-implementation-plan-20260621_211953.md
layout/: __init__.py  geometry.py  tree_layout.py
tests/: conftest.py  test_app_phase1.py  test_branch_rebuilder.py  test_collapse_model.py  test_diff_panel.py  test_font_utils.py  test_history_loader.py  test_key_selector.py  test_main_window_project.py  test_project_loader.py  test_project_navigator.py  test_project_tree.py  test_tree_layout.py  test_version_selection.py
ui/: __init__.py  collapsible_navigator.py  detail_panel.py  diff_panel.py  font_utils.py  graph_scene.py  graph_view.py  items.py  project_navigator.py  status_bar.py
